--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "MERN stack electronic voting project",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
