--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-server-express": "^2.13.1",
     "express": "^4.17.1",
     "graphql": "^14.2.1",
+    "mongodb": "^3.5.7",
     "nodemon": "^1.19.4",
     "npm": "^6.14.5"
   },
