--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "MERN stack electronic voting project API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js,graphql server.js",
+    "start": "nodemon -e js,graphql -w . -w .env server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jakubmroczek/voting-app-administrator-panel#readme",
   "dependencies": {
     "apollo-server-express": "^2.13.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^14.2.1",
     "mongodb": "^3.5.7",
