--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^0.21.0",
     "nodemon": "^1.19.4",
     "npm": "^6.14.5"
   },
