--- a/api/package.json
+++ b/api/package.json
@@ -25,5 +25,10 @@
     "mongodb": "^3.5.7",
     "nodemon": "^1.19.4",
     "npm": "^6.14.5"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.20.2"
   }
 }
