--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -4,6 +4,8 @@
         "browser": true
     },
     "rules": {
+        "import/extensions": [ "error", "always", {
+            "ignorePackages": true } ], 
         // Enable this in a final project
         "react/prop-types": "off"
     }
