--- a/ui/package.json
+++ b/ui/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -w uiserver.js -w .env uiserver.js",
-    "compile": "babel src --out-dir public",
-    "watch": "babel src --out-dir public --watch --verbose",
+    "compile": "webpack --mode production",
+    "watch": "webpack --watch",
     "lint": "eslint . --ext js,jsx --ignore-pattern public"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.20.2",
