--- a/ui/package.json
+++ b/ui/package.json
@@ -4,9 +4,13 @@
   "description": "MERN stack electronic voting project UI",
   "main": "index.js",
   "scripts": {
+    "#start": "UI server. HMR is enabled in dev mode.",
     "start": "nodemon -w uiserver.js -w .env uiserver.js",
+    "#compile": "Generates JS bundles for production. Use with start.",
     "compile": "webpack --mode production",
+    "#watch": "Compile, and recompile on any changes.",
     "watch": "webpack --watch",
+    "#lint": "Runs ESLint on all relevant files",
     "lint": "eslint . --ext js,jsx --ignore-pattern public"
   },
   "repository": {
@@ -20,11 +24,16 @@
   },
   "homepage": "https://github.com/jakubmroczek/voting-app-administrator-panel#readme",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.21.0",
     "nodemon": "^1.19.4",
-    "npm": "^6.14.5"
+    "npm": "^6.14.5",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -38,6 +47,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
