--- a/ui/package.json
+++ b/ui/package.json
@@ -32,6 +32,7 @@
     "npm": "^6.14.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^0.33.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^4.3.1",
     "url-search-params": "^1.1.0",
