--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/jakubmroczek/voting-app-administrator-panel#readme",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^3.4.1",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.21.0",
@@ -34,6 +35,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^0.33.1",
     "react-dom": "^16.13.1",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.3.1",
     "url-search-params": "^1.1.0",
     "whatwg-fetch": "^3.0.0"
