--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,13 @@
   },
   "homepage": "https://github.com/jakubmroczek/voting-app-administrator-panel#readme",
   "dependencies": {
+    "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@truffle/contract": "^4.2.2",
+    "babel-eslint": "^10.1.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.4.1",
     "dotenv": "^6.2.0",
@@ -35,9 +42,13 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "url-search-params": "^1.1.0",
+    "web3": "^1.2.7",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
