--- a/api/package.json
+++ b/api/package.json
@@ -19,10 +19,13 @@
   "homepage": "https://github.com/jakubmroczek/voting-app-administrator-panel#readme",
   "dependencies": {
     "apollo-server-express": "^2.13.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^2.0.2",
     "graphql": "^14.2.1",
     "mongodb": "^3.5.7",
+    "nodemailer": "^6.4.8",
     "nodemon": "^1.19.4",
     "npm": "^6.14.5"
   },
