--- a/ui/package.json
+++ b/ui/package.json
@@ -32,10 +32,11 @@
     "@truffle/contract": "^4.2.2",
     "babel-eslint": "^10.1.0",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^4.5.0",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.21.0",
+    "jquery": "^3.5.1",
     "nodemon": "^1.19.4",
     "npm": "^6.14.5",
     "prop-types": "^15.7.2",
