--- a/api/package.json
+++ b/api/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "apollo-server-express": "^2.13.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^2.0.2",
     "graphql": "^14.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
     "nodemailer": "^6.4.8",
     "nodemon": "^1.19.4",
