--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -e js,graphql -w . -w .env server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "#lint-fix": "Runs ESLint on all relevant files with auto-fixing",
+    "lint-fix": "eslint . --ext js,jsx --ignore-pattern public --fix"
   },
   "repository": {
     "type": "git",
