--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.5",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "generate-password": "^1.5.1",
     "google-auth-library": "^2.0.2",
     "graphql": "^14.2.1",
     "jsonwebtoken": "^8.5.1",
