--- a/api/package.json
+++ b/api/package.json
@@ -32,7 +32,8 @@
     "mongodb": "^3.5.7",
     "nodemailer": "^6.4.8",
     "nodemon": "^1.19.4",
-    "npm": "^6.14.5"
+    "npm": "^6.14.5",
+    "solc": "^0.6.10"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
