--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,9 @@
   },
   "homepage": "https://github.com/jakubmroczek/voting-app-administrator-panel#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.10",
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
