--- a/ui/package.json
+++ b/ui/package.json
@@ -39,6 +39,7 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.5.0",
     "dotenv": "^6.2.0",
+    "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.21.0",
     "jquery": "^3.5.1",
