added truffle for moment

--- a/ui/package.json
+++ b/ui/package.json
@@ -54,6 +54,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "truffle": "^5.1.30",
     "url-search-params": "^1.1.0",
     "web3": "^1.2.7",
     "whatwg-fetch": "^3.0.0"
