--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,8 @@
     "nodemailer": "^6.4.8",
     "nodemon": "^1.19.4",
     "npm": "^6.14.5",
-    "solc": "^0.6.10"
+    "solc": "^0.6.10",
+    "web3": "^1.2.9"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
