--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "graphql": "^14.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.7",
+    "mongoose": "^5.9.20",
     "nodemailer": "^6.4.8",
     "nodemon": "^1.19.4",
     "npm": "^6.14.5",
