--- a/ui/package.json
+++ b/ui/package.json
@@ -42,6 +42,7 @@
     "jquery": "^3.5.1",
     "nodemon": "^1.19.4",
     "npm": "^6.14.5",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
