--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,9 @@ before_install:
   - npm run build
 on:
   branch: master
+jobs:
+  include:
+    - stage: "Run Tests & SonarCloud Analysis"
+      script:
+        - npm test
+        - sonar-scanner -Dsonar.projectKey=$SONAR_PROJECT_KEY
